Changed folder placement

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos.
             </p>
         </div>
-        <img class="arrow" src="../img/arrow.svg" alt="" srcset="">
+        <img class="arrow" src="./img/arrow.svg" alt="" srcset="">
 
         <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px"
             href="https://unsplash.com/@freshseteyes?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge"
